отредактированы размеры картинок, добавлены дивки пунктов меню

--- a/app/views/pages/1_berry.html.slim
+++ b/app/views/pages/1_berry.html.slim
@@ -7,39 +7,26 @@ html
   body
     #root
       #header
-        =image_tag('zemlaninovka/title.png', height: 80)
-      #berry_title
-        =image_tag('zemlaninovka/berry1.png', height: 150)
+        =image_tag('zemlaninovka/title.png', height: 60)
+        #berry_title
+          =image_tag('zemlaninovka/berry1.png', height: 120)
       #menu
-        =image_tag('zemlaninovka/menu/01.png', height: 64)
-        br
-        a.menu    href='http://google.com'
-          =image_tag('zemlaninovka/menu/02.png', height: 67)
-        br
-        =image_tag('zemlaninovka/menu/03.png', height: 27)
-        br
-        a.menu    href='http://google.com'
-          =image_tag('zemlaninovka/menu/04.png', height: 68)
-        br
-        =image_tag('zemlaninovka/menu/05.png', height: 29)
-        br
-        a.menu    href='http://google.com'
-          =image_tag('zemlaninovka/menu/06.png', height: 66)
-        br
-        =image_tag('zemlaninovka/menu/07.png', height: 33)
-        br
-        a.menu    href='http://google.com'
-          =image_tag('zemlaninovka/menu/08.png', height: 66)
+        =image_tag('zemlaninovka/menu.png', height: 370)
+        #author
+        #poetry
+        #prose
+        #guestbook
+
       #stick
-        =image_tag('zemlaninovka/stick.png', height: 360)
+        =image_tag('zemlaninovka/stick.png', height: 330)
       #content
-        |lalalalalalalalalalalalallalalalalalalalalalalalallalalalalalalalalalalalallalalalalalalalalalalalallalalalalallalalalalalalalalalalalallalalalalalalalalalalalal
+        |lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalalalala lalala lalala lalala lalala lalala lalala lalala l
         br
-        |lalalalalalalalalalalalallalalalalalalalalalalalallalalalalalalalalalalalallalalalalalalalalalalalallalalalalallalalalalalalalalalalalallalalalalalalalalalalalal
+        |lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalalalala lalala lalala lalala lalala lalala lalala lalala l
         br
-        |lalalalalalalalalalalalallalalalalalalalalalalalallalalalalalalalalalalalallalalalalalalalalalalalallalalalalallalalalalalalalalalalalallalalalalalalalalalalalal
+        |lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalalalala lalala lalala lalala lalala lalala lalala lalala l
         br
-        |lalalalalalalalalalalalallalalalalalalalalalalalallalalalalalalalalalalalallalalalalalalalalalalalallalalalalallalalalalalalalalalalalallalalalalalalalalalalalal
+        |lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalala lalalalala lalala lalala lalala lalala lalala lalala lalala l
       #root_footer
     #footer
       #made_by
