--- a/app/assets/stylesheets/1_berry.sass
+++ b/app/assets/stylesheets/1_berry.sass
@@ -5,40 +5,68 @@
 
 body
   background: repeat-x image-url('zemlaninovka/bg.png')
-  min-width: 760px
-  //background-size: cover
-  //-o-background-size: cover
-  //-moz-background-size: cover
-  //-webkit-background-size: cover
+  min-width: 1000px
 
   #header
     margin: 0 auto
     width: 630px
     padding-top: 20px
+    position: relative
 
   #berry_title
-    margin-left: 820px
-    margin-top: -40px
+    left: 345px
+    top: 60px
+    position: absolute
+
 
 
   #menu
+    position: relative
     margin-left: 30px
     float: left
-    margin-top: -80px
+    margin-top: 80px
     line-height: 0px
+
+  #author, #poetry, #prose, #guestbook
+    position: absolute
+    background-color: blue
+    width: 163px
+    height: 58px
+
+  #author
+    top: 56px
+
+  #poetry
+    top: 139px
+
+  #prose
+    top: 223px
+
+  #guestbook
+    top: 310px
+
+
 
   #stick
     float: left
-    margin-top: -20px
+    margin-top: 130px
     margin-left: 25px
 
   #content
-    margin-top: 30px
+    margin:
+      top: 150px
+      left: 300px
+      right: 40px
     font-size: 25px
     line-height: 1.2
-    width: 1000px
-    margin-left: 300px
     overflow: hidden
+
+  #menu
+    position: relative
+
+  #author, #poetry, #prose, #guestbook
+    position: absolute
+    display: block
 
   #footer
     height: 58px
