--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -2,41 +2,28 @@ doctype html
 html
   head
     meta(charset="utf-8")
-    = stylesheet_link_tag    "application", :media => "all"
-    = javascript_include_tag "application"
-    = csrf_meta_tags
-  body class=([controller.controller_name, controller.action_name])
+    link rel="shortcut icon" href=image_path('zemlaninovka/favicon.png') type="image/png"
+    =stylesheet_link_tag '1_berry'
+  body
     #root
       #header
-        =image_tag('zemlaninovka/title.png', height: 80)
-      #berry_title
-        =image_tag('zemlaninovka/berry1.png', height: 150)
+        =image_tag('zemlaninovka/title.png', height: 60)
+        #berry_title
+          =image_tag('zemlaninovka/berry1.png', height: 120)
       #menu
-        =image_tag('zemlaninovka/menu/01.png', height: 64)
-        br
-        a.menu    href='http://google.com'
-          =image_tag('zemlaninovka/menu/02.png', height: 67)
-        br
-        =image_tag('zemlaninovka/menu/03.png', height: 27)
-        br
-        a.menu    href='http://google.com'
-          =image_tag('zemlaninovka/menu/04.png', height: 68)
-        br
-        =image_tag('zemlaninovka/menu/05.png', height: 29)
-        br
-        a.menu    href='http://google.com'
-          =image_tag('zemlaninovka/menu/06.png', height: 66)
-        br
-        =image_tag('zemlaninovka/menu/07.png', height: 33)
-        br
-        a.menu    href='http://google.com'
-          =image_tag('zemlaninovka/menu/08.png', height: 66)
+        =image_tag('zemlaninovka/menu.png', height: 370)
+        #author
+        #poetry
+        #prose
+        #guestbook
+
       #stick
-        =image_tag('zemlaninovka/stick.png', height: 360)
+        =image_tag('zemlaninovka/stick.png', height: 330)
       #content
         = yield
       #root_footer
     #footer
       #made_by
         =image_tag('zemlaninovka/footer.png', height: 50)
+
 
