формат авторской старицы, гостевой книги, оглавления и непосредственно текста лит.произведения

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,11 +1,11 @@
-body
-  background: repeat-x image-url('zemlaninovka/bg.png')
-  min-width: 1000px
+@import "shared"
 
-  #content_bird
-    width: 435px
-    margin: 0 auto
+#content_bird
+  width: 435px
 
-  #title_bird
-    margin: 0 auto
-    width: 803px
+#title_bird
+  width: 803px
+
+.main_link
+  display: block
+  margin: 0 auto
