релакция формы для комментов и номеров страниц дляя них же.

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -105,11 +105,11 @@ li a, #author, #poetry, #prose, #guestbook
 
 .td_form
   display: table-cell
-  
+  vertical-align: middle
 
 textarea
-  vertical-align: middle
   max-width: 400px
+  margin: 1px
 
 label.td_form, .guest_name, .date, #pages a
   font-size: 23px
@@ -126,6 +126,7 @@ input[type="submit"]
   font-size: 17px
   padding: 5px
   border: 1px solid #12650d
+  margin-top: 10px
 
 input[type="submit"]:focus
   outline: none
