--- a/app/assets/stylesheets/font.scss
+++ b/app/assets/stylesheets/font.scss
@@ -6,7 +6,7 @@
 //  @font-face {
 //   font-family: "neuchawebfont";
 //   src: local("neuchawebfont"), font-url('fonts/neucha-webfont.ttf');
-}
+// }
 
 // @font-face {
     // font-family: 'neuchawebfont';
