--- a/app/views/pages/guest_book.html.slim
+++ b/app/views/pages/guest_book.html.slim
@@ -38,7 +38,7 @@
 			|Доброго начала! Очень много мне сейчас созвучно, спасибо, Земляничная птичка!
 #pages
   a href="http://www.stihi.ru/" class="comment_page_number"
-    |1
+    |стр. 1
   a href="http://www.stihi.ru/" class="comment_current_page_number" 
     |2
   a href="http://www.stihi.ru/" class="comment_page_number" 
