--- a/app/views/pages/poems_list.html.slim
+++ b/app/views/pages/poems_list.html.slim
@@ -1,7 +1,34 @@
 #table_of_contents
+  a href="http://www.stihi.ru/"
+    |Стихотворение
   br
-  a.topic_link Стихотворение_0
+  a href="http://www.stihi.ru/"
+    |Стихотворение
   br
-  a.topic_link Стихотворение_1
+  a href="http://www.stihi.ru/"
+    |Стихотворение
   br
-  a.topic_link Стихотворение_2
+  a href="http://www.stihi.ru/"
+    |Стихотворение
+  br
+  a href="http://www.stihi.ru/"
+    |Стихотворение
+  br
+  a href="http://www.stihi.ru/"
+    |Стихотворение
+  br
+  a href="http://www.stihi.ru/"
+    |Стихотворение
+  br
+  a href="http://www.stihi.ru/"
+    |Стихотворение
+  br
+  a href="http://www.stihi.ru/"
+    |Стихотворение
+  br
+  a href="http://www.stihi.ru/"
+    |Стихотворение
+  br
+  a href="http://www.stihi.ru/"
+    |Стихотворение
+
