Links to author page

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,7 +13,7 @@ html
       ul id="menu"
         =image_tag('zemlaninovka/menu.png', height: 370)
         li id="author"
-          a href="https://vk.com/feed"
+          = link_to author_path
         li id="poetry"
           a href="https://vk.com/feed"
         li id="prose"
