--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -13,9 +13,9 @@ html
       ul id="menu"
         =image_tag('zemlaninovka/menu.png', height: 370)
         li id="author"
-          = link_to author_path
+          = link_to '', author_path
         li id="poetry"
-          a href="https://vk.com/feed"
+          = link_to '', poems_path
         li id="prose"
           a href="https://vk.com/feed"
         li id="guestbook"
