--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -22,7 +22,7 @@ html
         li id="prose"
           a href="https://vk.com/feed"
         li id="guestbook"
-          a href="https://vk.com/feed"
+          = link_to '', comments_path
       #stick
         =image_tag('zemlaninovka/stick.png', height: 330)
       #content
