--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,7 +20,7 @@ html
         li id="poetry"
           = link_to '', poems_path
         li id="prose"
-          a href="https://vk.com/feed"
+          a href="http://google.com"
         li id="guestbook"
           = link_to '', comments_path
       #stick
