--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,9 +1,9 @@
-= simple_form_for(@prose) do |f|
+= simple_form_for(resource) do |f|
   = f.error_notification
 
   .form-inputs
     = f.input :title
-    = f.input :text
+    = f.input :text, as: :text
 
   .form-actions
     = f.button :submit
