исправлена очепятка в #table_form (maRGin)

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -98,7 +98,7 @@ li a, #author, #poetry, #prose, #guestbook
 
 #table_form
   display: table
-  magrin-top: 20px
+  margin-top: 20px
 
 .tr_form
   display: table-row
