--- a/app/views/comments/index.html.slim
+++ b/app/views/comments/index.html.slim
@@ -9,6 +9,7 @@
         = l comment.created_at, format: :short
       p class="comment_text"
         = simple_format comment.text
-      td = link_to 'Destroy', comment, data: {:confirm => 'Are you sure?'}, :method => :delete
+      - if can? :destroy, resource
+        = link_to 'Destroy', comment, data: {:confirm => 'Are you sure?'}, :method => :delete
 
 = paginate @comments
