--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -6,7 +6,7 @@ html
     =stylesheet_link_tag 'application'
     = javascript_include_tag 'application', 'data-turbolinks-track' => true
     = csrf_meta_tags
-    title Земляниновка
+    title = @title || 'Земляниновка'
   body
     #root
       p#notice = notice
