формат гостевой книги, авторской страницы, ссылки на главную

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -96,16 +96,20 @@ li a, #author, #poetry, #prose, #guestbook
 #hello_world p
   margin-top: 10px
 
-#table_form
+// #table_form 
+.form-inputs
   display: table
   margin-top: 20px
 
-.tr_form
+//.tr_form
+.comment_author, .comment_text
   display: table-row
 
-.td_form
+// .td_form
+.control-label, #comment_author, #comment_text 
   display: table-cell
   vertical-align: middle
+  margin-left: 4px
 
 textarea
   max-width: 400px
