--- a/app/views/pages/author.html.slim
+++ b/app/views/pages/author.html.slim
@@ -18,7 +18,7 @@
 		p
 			|Пишу нечасто, но зато только по Вдохновению.
 		p
-			|Что ещё могу сказать? Важнее, что о моем творчестве скажете Вы. Очень надеюсь, что какие-нибудь из моих историй доставят Вам приятные минуты! Буду рада Вашему отклику в гостевой книжке.
+			|Что ещё могу сказать? Важнее, что о моем творчестве скажете Вы. Очень надеюсь, что какие-нибудь из моих историй доставят Вам приятные минуты! Буду рада Вашему отзыву в гостевой книжке.
 		p
 			|Желаю "вкусного" чтения!
 		#author_photo
