--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -9,10 +9,11 @@ html
     title Земляниновка
   body
     #root
-      #header
-        =image_tag('zemlaninovka/title.png', height: 60)
-        #berry_title
-          =image_tag('zemlaninovka/berry1.png', height: 120)
+      = link_to root_path do
+        #header
+          =image_tag('zemlaninovka/title.png', height: 60)
+          #berry_title
+            =image_tag('zemlaninovka/berry1.png', height: 120)
       ul id="menu"
         =image_tag('zemlaninovka/menu.png', height: 370)
         li id="author"
@@ -31,11 +32,14 @@ html
       #root_footer
     #footer
       #made_by
-        |Программное обеспечение Григорьев О.
+        |Программное обеспечение 
+        a href='https://vk.com/mehanoid' Григорьев О.
         br
-        |Верстка Григорьева Ю.
+        |Верстка 
+        a href='https://vk.com/serdce_ptici' Григорьева Ю.
         br
-        |Дизайн Фанина А.
+        |Дизайн 
+        a href='https://vk.com/stormypetrel' Фанина А.
         br
         |2014&copy
 
