--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,5 +1,3 @@
-@import "shared"
-
 #content_bird
   width: 435px
 
@@ -9,3 +7,10 @@
 .main_link
   display: block
   margin: 0 auto
+
+body
+  background:
+    color: #b1eec4
+    image: linear-gradient(to top, #87d59b, #caf7d8) 
+    attachment: fixed
+  min-width: 1000px
