добавлено моргание и заголовки страниц

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,12 +1,20 @@
 #content_bird
+  position: relative
   width: 435px
 
 #title_bird
   width: 803px
+  margin: 0 auto
 
 .main_link
   display: block
   margin: 0 auto
+
+#eyes
+  position: absolute
+  top: 44px
+  left: 98px
+
 
 body
   background:
