--- a/app/views/pages/main.html.slim
+++ b/app/views/pages/main.html.slim
@@ -4,9 +4,12 @@ html
     meta(charset="utf-8")
     link rel="shortcut icon" href=image_path('zemlaninovka/favicon.png') type="image/png"
     =stylesheet_link_tag 'main'
+    = javascript_include_tag 'application', 'data-turbolinks-track' => true
     title Земляниновка
   body
     = link_to author_path, id: :content_bird, class: :main_link do
       =image_tag('zemlaninovka/main_bird.png', height: 450)
-    = link_to author_path, id: :title_bird, class: :main_link do
+      #eyes
+        = image_tag('zemlaninovka/eyes.png', height: 44)
+    = link_to author_path, id: :title_bird,  class: :main_link do
       =image_tag('zemlaninovka/title_bird.png', height: 100)
