--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -60,10 +60,10 @@ body
   line-height: 17px
 
 
-li a
+#menu a
   display: block
 
-li a, #author, #poetry, #prose, #guestbook
+#author a, #poetry a, #prose a, #guestbook a
   width: 163px
   height: 58px 
 
@@ -160,4 +160,9 @@ input[type="submit"]:hover, input[type="submit"]:focus
 
 .del, .edit
   display: inline-block
- 
+
+#list
+  list-style: disc
+
+#list a:hover
+  color: #d91a34
