--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -17,8 +17,12 @@
 
 
 body
+
   background:
     color: #b1eec4
     image: linear-gradient(to top, #87d59b, #caf7d8) 
     attachment: fixed
   min-width: 1000px
+
+#main_wrap
+  margin-top: 60px
