--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -18,10 +18,7 @@
 
 body
 
-  background:
-    color: #b1eec4
-    image: linear-gradient(to top, #87d59b, #caf7d8) 
-    attachment: fixed
+  background-color: #b1eec4
   min-width: 1000px
 
 #main_wrap
