--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -4,10 +4,7 @@
 +sticky-footer(+70px)
 
 body
-  background:
-    color: #b1eec4
-    image: linear-gradient(to top, #87d59b, #caf7d8) 
-    attachment: fixed
+  background-color: #b1eec4
   min-width: 1000px
 
 
