--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -163,3 +163,6 @@ input[type="submit"]:hover, input[type="submit"]:focus
 
 #list a:hover
   color: #d91a34
+
+#comment_author, #comment_text
+  width: 169px
