--- a/app/views/pages/author.html.slim
+++ b/app/views/pages/author.html.slim
@@ -14,13 +14,11 @@
 		p	
 			|Я очень рада, что путешествуя по горам и долам интернета, Вы забрели на мою земляничную поляну. 
 		p	
-			|Меня зовут Юлия Григорьева, но еще в детстве обнаружилось, что в груди у меня бьется сердце птицы, поэтому название моего вида пернатых мне как-то ближе. Поэтому будем знакомы – Земляниновка к Вашим услугам!
+			|Меня зовут Юлия Григорьева, но еще в детстве обнаружилось, что в груди у меня бьется сердце птицы, поэтому название моего вида пернатых мне как-то ближе. Будем знакомы – Земляниновка к Вашим услугам!
 		p 
-			|Родилась я в Москве, но живу где-то в эпохе Романтизма, где чувства доведены до предела и преобладают над разумом. Стараюсь как можно чаще "делать чудеса своими руками". Люблю яркие краски, не испорченные полутонами, а еще долгую дорогу, сильный ветер и настоящих Людей с огнем внутри, не боящихся говорить, действовать и менять к лучшему мир вокруг себя. Я самоуверенна и непредсказуема, бесконечно влюблена в Жизнь и «надеюсь, что это взаимно»!
+			|Я родилась в Москве, но живу где-то в эпохе Романтизма, где чувства доведены до предела и преобладают над разумом. Стараюсь как можно чаще "делать чудеса своими руками". Люблю яркие краски, не испорченные полутонами, а еще долгую дорогу, сильный ветер и настоящих Людей с огнем внутри, не боящихся говорить, действовать и менять к лучшему мир вокруг себя. Я самоуверенна и непредсказуема, бесконечно влюблена в Жизнь и «надеюсь, что это взаимно»!
 		p
-			|Пишу нечасто, но зато только по Вдохновению.
-		p
-			|Что ещё могу сказать? Важнее, что о моем творчестве скажете Вы. Очень надеюсь, что какие-нибудь из моих историй доставят Вам приятные минуты! Буду рада Вашему отзыву в гостевой книжке.
+			|Что ещё могу добавить? Важнее, что о моем творчестве скажете Вы. Очень надеюсь, что какие-нибудь из моих историй доставят Вам приятные минуты! Буду рада Вашему отзыву в гостевой книжке.
 		p
 			|Желаю "вкусного" чтения!
 		#author_photo
