--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -166,3 +166,6 @@ input[type="submit"]:hover, input[type="submit"]:focus
 
 #comment_author, #comment_text
   width: 169px
+
+#comment_text
+  padding: 0px
