full datetime for comments

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -136,8 +136,12 @@ input[type="submit"], button[type="submit"]
 .comment_current_page_number, .product_title
   font-size: 26px
 
-.guest_name, .date
+.guest_name
   font-size: 25px
+
+.date
+  font-size: 20px
+  margin-right: 10px
 
 #menu, #header
   position: relative
